Gnome-shell fixes
- Fix big padding on notification button
- Fix invisible close button on notifications list

--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -996,6 +996,9 @@ StScrollBar {
     box-shadow: 2px 0px 0px 0px #bd93f9 inset;
     border-radius: 1px 5px 5px 1px; }
 
+.message-close-button {
+  color: #C3C7D1; }
+
 .message-icon-bin {
   padding: 10px 3px 10px 10px; }
   .message-icon-bin:rtl {
@@ -1497,7 +1500,7 @@ StScrollBar {
     padding-top: 2px;
     spacing: 1px; }
   .notification-banner .notification-button {
-    padding: 4px 4px 5px;
+    padding: 0px;
     background-color: rgba(40, 42, 54, 0.9); }
     .notification-banner .notification-button:first-child {
       border-radius: 0 0 0 3px; }
